# ccpca

./: .gitignore  README.md  asset-manifest.json  ccpca.cpp  ccpca.hpp  index.html  manifest.json  precache-manifest.e0afdb3ac1bf8d3bcb23697490486a97.js  sample.ipynb  sample.py  service-worker.js  setup.py
ccpca/: CMakeLists.txt  __init__.py  ccpca.cpp  ccpca.hpp  ccpca.py  ccpca_wrap.cpp  cpca.cpp  cpca.hpp  cpca.py  cpca_wrap.cpp  presetup.py  sample.py  setup.py
cpca/: __init__.py  cpca.cpp  cpca.hpp  cpca.py
fc_view/: __init__.py  mat_reorder.py  opt_sign_flip.py  setup.py
sample_data/: crime.featurenames.csv  wine.csv  wine.featurenames.csv
static/css/: main.3bd542d0.chunk.css  main.d2d5ea33.chunk.css
static/js/: main.0991bc3d.chunk.js  main.1c20dbe0.chunk.js  main.3023d23e.chunk.js  main.393e6842.chunk.js  main.50f9d9be.chunk.js  main.5cc4a935.chunk.js  main.a0cad497.chunk.js  main.f2105283.chunk.js  runtime~main.a5de4585.js  runtime~main.bc28eb06.js  runtime~main.ccc29ebe.js  vendors~main.04122e4c.chunk.js  vendors~main.a15774a9.chunk.js
